tests/NormalTests/paczka1/fuzzy1/88328446.err
Error in line 20: S898 Sj58 177,6
Error in line 14: cnv S981 51,2
Error in line 27: syEGxiC S981 46,8
Error in line 17: gjnRA S258 252,0
Error in line 7: v5Sbc S898 4,6
